resources/experiment/0814-specgen/081403/log-AddLoop_Mutant3-2025_08_15_09_56_16.txt
public class AddLoop_Mutant3 {
    /*@ public normal_behavior
      @   requires y >= 0 ==> sum == x + 2*y;
      @   requires y < 0 ==> sum == x + y;
      @   ensures \result == (y >= 0 ? x + 2*y : x + y);
      @*/
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            /*@ maintaining sum == x + 2*(y - n);
              @ maintaining n >= 0;
              @ decreases n;
              @*/
            while (n > 0) {
                sum = sum + 2;
                n = n - 1;
            }
        } else {
            int n = -y;
            /*@ maintaining sum == x - (-y - n);
              @ maintaining n >= 0;
              @ decreases n;
              @*/
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
            }
        }
        return sum;
    }
}
==============================
/root/specgen/SpecGen/project/081403-specgen/tmp/AddLoop_Mutant3.java:3: error: cannot find symbol
      @   requires y >= 0 ==> sum == x + 2*y;
                              ^
  symbol:   variable sum
  location: class AddLoop_Mutant3
/root/specgen/SpecGen/project/081403-specgen/tmp/AddLoop_Mutant3.java:4: error: cannot find symbol
      @   requires y < 0 ==> sum == x + y;
                             ^
  symbol:   variable sum
  location: class AddLoop_Mutant3
2 errors

==============================
public class AddLoop_Mutant3 {
    /*@ public normal_behavior
      @   ensures \result == (y >= 0 ? x + 2*y : x + y);
      @*/
    public static int AddLoop(int x, int y) {
        int sum = x;
        if (y > 0) {
            int n = y;
            /*@ maintaining sum == x + 2*(y - n);
              @ maintaining n >= 0;
              @ decreases n;
              @*/
            while (n > 0) {
                sum = sum + 2;
                n = n - 1;
            }
        } else {
            int n = -y;
            /*@ maintaining sum == x - (-y - n);
              @ maintaining n >= 0;
              @ decreases n;
              @*/
            while (n > 0) {
                sum = sum - 1;
                n = n - 1;
            }
        }
        return sum;
    }
}
==============================

==============================
